# bugbench

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  presentation.html  pyproject.toml
.github/workflows/: ci.yml
cases/: .golden_set.json
cases/grafana/: .curate_checkpoint.json  grafana-001.yaml  grafana-002.yaml
cases/keycloak/: .curate_checkpoint.json  keycloak-001.yaml  keycloak-002.yaml  keycloak-003.yaml  keycloak-004.yaml  keycloak-005.yaml  keycloak-006.yaml  keycloak-007.yaml  keycloak-008.yaml  keycloak-009.yaml  keycloak-010.yaml
cases/leo-g0/: .curate_checkpoint.json  leo-001.yaml  leo-002.yaml  leo-003.yaml  leo-004.yaml  leo-005.yaml  leo-006.yaml  leo-007.yaml  leo-008.yaml  leo-009.yaml  leo-010.yaml  leo-011.yaml  leo-012.yaml  (+74 more)
config/: agent_prompt.md  agent_prompt_diff+repo.md  agent_prompt_introducing.md  config.yaml  curate_agent.md  curate_prompt.md  judge_prompt.md  pilot-60.txt
docs/: BACKLOG.md  analysis.md  architectural-decisions.md  audit.md  experiment-design.md  future-work.md  ground-truth-improvements.md  pilot-plan.md  pilot-report-2026-03-22.md  presentation.html  results-schema.md  runbook.md  scoring-rubric-v2.md  todo.md
patches/: cal-com-001.patch  cal-com-002.patch  cal-com-003.patch  cal-com-004.patch  cal-com-005.patch  cal-com-006.patch  cal-com-007.patch  cal-com-008.patch  cal-com-009.patch  cal-com-010.patch  cal-com-011.patch  cal-com-012.patch  cal-com-013.patch  cal-com-014.patch  cal-com-015.patch  cal-com-016.patch  cal-com-017.patch  cal-com-018.patch  cal-com-019.patch  cal-com-020.patch  cal-com-021.patch  cal-com-022.patch  cal-com-023.patch  cal-com-025.patch  cal-com-026.patch  cal-com-028.patch  cal-com-029.patch  cal-com-030.patch  cal-com-032.patch  cal-com-033.patch  cal-com-034.patch  cal-com-036.patch  cal-com-037.patch  cal-com-039.patch  cal-com-040.patch  cal-com-041.patch  cal-com-042.patch  cal-com-043.patch  cal-com-044.patch  cal-com-045.patch  (+1253 more)
scripts/: curate_all.sh  flag_model_generated.py
tests/: conftest.py  test_adapters.py  test_add_case.py  test_agent_api_runner.py  test_agent_cli_runner.py  test_agent_models.py  test_agent_prompts.py  test_agent_runner.py  test_agent_sdk_runner.py  test_analyze.py  test_blame.py  test_calibrate_tp_novel.py  test_clean_cases.py  test_cli.py  test_cli_runners.py  test_coderabbit_runner.py  test_copilot_runner.py  test_cross_validate.py  test_curate.py  test_dashboard.py  test_dashboard_helpers.py  test_dashboard_models.py  test_evaluate.py  test_experiment_models.py  test_extract_patch.py  test_gen_clean_cases.py  test_gen_introducing_cases.py  test_git_miner.py  test_git_utils.py  test_github_scraper.py  test_greptile_adapter.py  test_greptile_runner.py  test_ground_truth.py  test_groundedness.py  test_human_judge.py  test_integration.py  test_io.py  test_judge.py  test_judge_models.py  test_llm.py  (+25 more)
(+3627 files in other folders)
